# numbers-task-1

./: .env  Cargo.toml  Dockerfile  README.md
src/: config.rs  main.rs
src/handlers/: handler.rs
src/routes/: mod.rs  route.rs
