[package]
name = "learn_async_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0"
actix-web = "4"
actix-cors = "0"
config = "0"
dotenv = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
validator = "0"
validator_derive = "0"
reqwest = { version = "0.11", features = ["json"] }
