[package]
name = "learn_async_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0"
actix-web = { version = "4", features = ["rustls"] }
actix-cors = "0"
config = "0"
dotenv = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
validator = "0"
validator_derive = "0"
reqwest = { version = "0.11", features = ["json"] }
tracing = "0"
tracing-futures = "0"
tracing-actix-web = "0.7"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0", features= ["env-filter"] }
